# time-paradox

./: .gitignore  CMakeLists.txt  Game.sln  README.md
Game/: AccessabilityMap.h  Act.h  Acts.cpp  Acts.h  Camera.cpp  Camera.h  CloneObject.cpp  CloneObject.h  Common.cpp  Common.h  Game.h  Game.vcxproj  Game.vcxproj.filters  InGameCamera.cpp  InGameCamera.h  LevelManager.cpp  LevelManager.h  Movable.h  MovingPlatform.h  Player.cpp  Player.h  ResourceManagers.cpp  ResourceManagers.h  SFML_Debug.props  SFML_Release.props  TimeManager.cpp  TimeManager.h  glow.frag  main.cpp
Game/Components/: Button.h  Door.h  Drawable.h  GamePosition.h  Interactible.cpp  Interactible.h  Motorial.h  Movable.h  Platform.h  PlayerControlable.h  PlayerControllable.h  Region.h  Trigerable.h  Trigger.h  Triggerable.h
Game/Entities/: Door.cpp  Door.h  MovingPlatform.cpp  MovingPlatform.h  Switch.cpp  Switch.h
Game/EntityComponentSystem/: AccessabilityMap.cpp  AccessabilityMap.h  Component.hpp  ComponentFilter.cpp  Entity.cpp  Entity.hpp  System.cpp  TypeLists.hpp  World.cpp  World.hpp  WorldMap.cpp  WorldMap.h
Game/EntityComponentSystem/detail/: EntityComponentStorage.cpp  EntityComponentStorage.hpp  EntityIdPool.cpp  EntityIdPool.hpp
Game/Systems/: ButtonSystem.cpp  ButtonSystem.h  DoorSystem.cpp  DoorSystem.h  EventDispatcher.cpp  EventDispatcher.h  Graphics.cpp  Graphics.h  MotorialSystem.cpp  MotorialSystem.h  PlatformSystem.cpp  PlatformSystem.h  RegionSystem.cpp  RegionSystem.h  TriggerSystem.cpp  TriggerSystem.h
Game/Utils/: Acts.h  JsonValue.cpp  JsonValue.h
Game/maps/: 2.tmx  3.json  4.tmx  Game Demo 3.json  Game Demo 4.json
Game/maps/denis/: 1.json  1.tmx  2.json  3.tmx  4.json  4_.json  5.json  5.tmx
resources/: Game Demo 2.json  Levels.config  glow.frag
src/: CMakeLists.txt
src/Components/: Drawable.h  GamePosition.h  Motorial.h  Movable.h  Region.h
src/Entities/: Door.cpp  Door.h  MovingPlatform.cpp  Switch.h
src/EntityComponentSystem/: Component.hpp  ComponentFilter.hpp  Entity.hpp  System.hpp  World.hpp
src/EntityComponentSystem/detail/: ClassTypeId.hpp  EntityComponentStorage.hpp
src/Game/: AccessabilityMap.cpp  Act.h  Acts.h  Common.h  Game.cpp  Game.h  LevelManager.cpp  ResourceManager.cpp  ResourceManager.h  TimeManager.cpp  TimeManager.h  main.cpp
src/Systems/: EventDispatcher.cpp  EventDispatcher.h  Graphics.cpp  MotorialSystem.cpp  RegionSystem.cpp
src/Utils/: JsonValue.cpp
